@@ -125,8 +125,10 @@ PHP                                                                        NEWS
 - SPL:
   . Fixed bug #74977 (Appending AppendIterator leads to segfault). 
     (Andrew Nester)
-  . Fixed bug #75173 (incorrect behavior of AppendIterator::append in foreach loop).
-    (jhdxr)
+  . Fixed bug #75173 (incorrect behavior of AppendIterator::append in foreach
+    loop). (jhdxr)
+  . Fixed bug #74372 (autoloading file with syntax error uses next autoloader,
+    may hide parse error). (Nikita)
 
 - SQLite3:
   . Updated bundled libsqlite to 3.21.0. (cmb)
